--- a/music-admin/package.json
+++ b/music-admin/package.json
@@ -4,59 +4,37 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "build": "vue-cli-service build"
   },
   "dependencies": {
-    "axios": "^1.1.3",
-    "core-js": "^3.8.3",
+    "axios": "^0.24.0",
+    "core-js": "^3.6.5",
     "echarts": "^4.8.0",
-    "element-ui": "^2.15.10",
+    "element-ui": "^2.15.6",
+    "normalize.css": "7.0.0",
+    "nprogress": "^0.2.0",
+    "script-ext-html-webpack-plugin": "^2.1.5",
     "v-charts": "^1.19.0",
-    "vue": "^2.6.14",
+    "vue-echarts": "^5.0.0-beta.0",
+    "vue": "^2.6.11",
     "vue-router": "^3.5.1",
-    "vuex": "^3.6.2",
-    "zrender": "^4.3.1"
+    "vuex": "^3.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "lint-staged": "^11.1.2",
-    "prettier": "^2.4.1",
-    "vue-template-compiler": "^2.6.14"
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
     "root": true,
     "env": {
       "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended",
-      "plugin:prettier/recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    },
-    "rules": {}
+    }
   },
   "browserslist": [
     "> 1%",
     "last 2 versions"
-  ],
-  "gitHooks": {
-    "pre-commit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.{js,jsx,vue}": "vue-cli-service lint"
-  }
+  ]
 }
