--- a/music-admin/package.json
+++ b/music-admin/package.json
@@ -14,6 +14,9 @@
     "normalize.css": "7.0.0",
     "nprogress": "^0.2.0",
     "script-ext-html-webpack-plugin": "^2.1.5",
+    "webpack": "^4.0.0",
+    "html-webpack-plugin": "^4.0.0",
+    "zrender": "^4.3.1",
     "v-charts": "^1.19.0",
     "vue-echarts": "^5.0.0-beta.0",
     "vue": "^2.6.11",
