--- a/music-view/package.json
+++ b/music-view/package.json
@@ -12,6 +12,8 @@
     "element-ui": "^2.15.6",
     "normalize.css": "7.0.0",
     "nprogress": "^0.2.0",
+    "webpack": "^4.36.0",
+    "html-webpack-plugin": "^4.0.0",
     "script-ext-html-webpack-plugin": "^2.1.5",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
